Fixed collapsible opening when icon clicked, made icons align to bottom

--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -89,7 +89,7 @@ li.timeline-event {
     clear: both;
 }
 
-.timeline-event .box .icon {
+.timeline-event .box .icon, .timeline-event .box a {
     height: 30px;
     position: relative;
     align-self: flex-end;
